# rssh

./: .gitignore  AGENT.md  AGENTS.md  CONTRIBUTING.md  FEATURES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_blacklist.md  LICENSE  README.md  README_zh.md  build-android.sh  build-ios.sh  build-linux.sh  build-mac.sh  index.html  package-lock.json  package.json  roadmap.md  rust-review-report.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/scripts/: fix-appimage-icon.sh
.github/workflows/: build.yml  create-pod.yml  ios-release.yml  pre-release.yml  release.yml  share-next  share-next.yml  ssh-debug.yml  windows-debug.yml
completions/: _rssh  _rssh.ps1  rssh.bash  rssh.fish
docs/: .gitignore  CNAME  ai-diagnose-design.md  article_arch_en.md  article_dynamic_discovery_zh.md  article_en.md  article_security_zh.md  article_structured_zh.md  article_vs_zh.md  article_workbench_zh.md  article_zh.md  index.html  privacy-policy.html  sitemap.xml
docs/example/: cpu_ramp.py  cpu_ramp.sh
idea-plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
idea-plugin/src/main/kotlin/sh/rssh/idea/: RsshBridge.kt  (+2 more)
scripts/: dev-browser.mjs
src/: App.svelte  global.d.ts  main.ts
src-tauri/: Cargo.toml  Info.ios.plist  rssh.desktop  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: crypto.rs  emitter.rs  error.rs  lib.rs  main.rs  models.rs  server.rs  server_main.rs  state.rs  telnet_profile.rs
src-tauri/src/ai/: audit.rs  command_blacklist.rs  commands.rs  file_ops.rs  mod.rs  prompts.rs  redact_rules.rs  sanitize.rs  session.rs  shell.rs  skills.rs  tools.rs
src-tauri/src/ai/llm/: anthropic.rs  deepseek.rs  glm.rs  mod.rs  openai.rs  protocol.rs
src-tauri/src/ai/prompts/: cpu-go.md  cpu-java.md  general.md  mem-go.md  mem-java.md
src-tauri/src/ai/session/: file_ops.rs
src-tauri/src/commands/: cli.rs  discovery.rs  external.rs  forward.rs  group.rs  lifecycle.rs  mod.rs  profile.rs  pty.rs  serial.rs  session.rs  settings.rs  sftp.rs  sync.rs  telnet.rs  update.rs  window.rs
src-tauri/src/db/: ai_command_blacklist.rs  ai_conversation.rs  ai_redact_rule.rs  ai_skill.rs  credential.rs  forward.rs  group.rs  highlight.rs  mod.rs  profile.rs  schema.rs  secret.rs  serial_profile.rs  settings.rs  snippet.rs  telnet_profile.rs
src-tauri/src/migration/: mod.rs  v1_unified_secret_storage.rs  v2_telnet_login_script.rs
src-tauri/src/secret/: crypto.rs  db_store.rs  hybrid_store.rs  keyring_store.rs  master_key.rs  mod.rs
src-tauri/src/ssh/: algorithms.rs  auth.rs  bastion.rs  client.rs  config.rs  forward.rs  known_hosts.rs  mod.rs  prompt.rs  sftp.rs
src-tauri/src/sync/: config.rs  github.rs  metadata.rs  mod.rs  remote.rs  webdav.rs
src-tauri/src/terminal/: mod.rs  pty.rs  recorder.rs  serial.rs  telnet.rs
src-tauri/tests/: cli_contract.rs
src/lib/: clipboard.test.ts  clipboard.ts  ipc-boot.ts  ipc-shim.test.ts  ipc-shim.ts  local-drop.test.ts  local-drop.ts  pick-file.test.ts  pick-file.ts  platform.test.ts  platform.ts  save-file.test.ts  save-file.ts  sftp-name.test.ts  sftp-name.ts
src/lib/ai/: AuditPanel.svelte  ChatPanel.svelte  CommandConfirmDialog.svelte  DangerModeToggle.svelte  command-approval.test.ts  command-approval.ts  format.test.ts  format.ts  markdown.ts  pty-output.test.ts  pty-output.ts  session-identity.ts  shell-probe.test.ts  shell-probe.ts  store.svelte.test.ts  store.svelte.ts  timeline.test.ts  timeline.ts  tokens.test.ts  tokens.ts  types.ts
src/lib/components/: AboutScreen.svelte  AiSettings.svelte  AppIcon.svelte  AppShell.svelte  AppearanceSettings.svelte  BlockContextMenu.svelte  CliSettings.svelte  CommandBlockSettings.svelte  ConnectionEditor.svelte  ConnectionList.svelte  CredentialEditor.svelte  CredentialManager.svelte  DownloadsScreen.svelte  DynamicDiscoverySettings.svelte  DynamicDiscoverySourceForm.svelte  EditPane.svelte  FontSelect.svelte  ForwardEditor.svelte  ForwardManager.svelte  ForwardPane.svelte  GitHubSyncScreen.svelte  GroupManager.svelte  HelpScreen.svelte  HighlightManager.svelte  HighlightRuleForm.svelte  HomeScreen.svelte  ImportExportScreen.svelte  MenuButton.svelte  MobileKeybar.svelte  Modal.svelte  PlaybackScreen.svelte  ProfileEditor.svelte  ProfileManager.svelte  RecordingSettings.svelte  SearchSelect.svelte  Select.svelte  SerialProfileEditor.svelte  SerialProfileManager.svelte  SessionMinimap.svelte  SessionPreviewPopover.svelte  (+34 more)
src/lib/components/welcome/: MockCursor.svelte  NextButton.svelte  SceneAi.svelte  SceneBlocks.svelte  SceneCli.svelte  SceneCta.svelte  SceneIntro.svelte  SceneSync.svelte
src/lib/i18n/: index.svelte.ts  index.test.ts
src/lib/i18n/locales/: en.ts  zh.ts
src/lib/keyboard/: keymap.test.ts  keymap.ts  registry.test.ts  registry.ts
src/lib/osc/: clipboard.test.ts  clipboard.ts  handler.test.ts  handler.ts
src/lib/stores/: app.svelte.test.ts  app.svelte.ts  cli.svelte.test.ts  cli.svelte.ts  keymap.svelte.ts  sync.svelte.test.ts  sync.svelte.ts  toast.svelte.ts  toast.test.ts  transfers.svelte.ts  updates.svelte.ts
src/lib/terminal/: block-content.test.ts  block-content.ts  block-to-image.test.ts  block-to-image.ts  broadcast-text.test.ts  broadcast-text.ts  command-blocks.test.ts  command-blocks.ts  folds.test.ts  folds.ts  highlight-decorations.test.ts  highlight-decorations.ts  highlight.test.ts  highlight.ts  paint-scheduler.test.ts  paint-scheduler.ts  reserved-session-attempt.test.ts  reserved-session-attempt.ts  serial-transforms.test.ts  serial-transforms.ts  touch-scroll.test.ts  touch-scroll.ts  viewport-snapshot.test.ts  viewport-snapshot.ts  write-batcher.test.ts  write-batcher.ts  xterm-ime-229-workaround.test.ts  xterm-ime-229-workaround.ts
src/lib/themes/: palettes.test.ts  palettes.ts  store.svelte.ts  term-font.test.ts  term-font.ts  term-palettes.test.ts  term-palettes.ts
src/styles/: global.css
src/styles/shapes/: flat.css  glass.css  material.css  neumorphism.css
