[package]
name = "rssh"
version = "0.0.1"
edition = "2021"
default-run = "rssh"

[lib]
name = "rssh_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"

# SSH
russh = "0.46"
russh-keys = "0.46"
tokio = { version = "1", features = ["sync", "macros", "net", "io-util", "rt", "process", "time"] }
async-trait = "0.1"

# SFTP
russh-sftp = "2"

# HTTP + crypto
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
getrandom = "0.2"
regex = "1"
futures-util = "0.3"

# CLI（optional，靠 --features cli 启用）
clap = { version = "4", features = ["derive"], optional = true }
rpassword = { version = "7", optional = true }
tempfile = { version = "3", optional = true }

# PTY & native file dialogs & clipboard — 桌面平台专用
[target.'cfg(not(target_os = "android"))'.dependencies]
portable-pty = "0.8"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
arboard = "3"

# Keychain — 各平台用各自原生 backend；Android 没有支持，自动降级到 DB
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[features]
default = []
cli = ["clap", "rpassword", "tempfile"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "rssh"
path = "src/main.rs"

[[bin]]
name = "rssh-cli"
path = "src/bin/rssh.rs"
required-features = ["cli"]
